--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
     <div class="top-bar">
       <a href="./">PRECISA DE AJUDA</a>
       <div class="top-bar2">
-        <img src="./img/car.svg" alt="top-bar">
+        <img src="./img/car.svg" alt="carrinho de envio no top-bar">
         <p class="nationwide-shipping">ENVIAMOS PARA TODO O BRASIL<span>BR</span></p>
       </div>
       <a href="./">WHATSAPP:(XX) XXXXX-XXXX</a>
     </div>
     <div class="top-header">
-      <img src="./img/menu.svg" alt="logo" class="icon-menu">
+      <img src="./img/menu.svg" alt="icone-menu mobile" class="icon-menu">
       <div class="input-wrapper">
         <img src="./img/search.svg" alt="search-site" class="search">
         <input type="text" id="search" placeholder="Buscar..." class="input-text">
       </div>
       <a href="./index.html" class="logo-link">
-        <img src="./img/icon.svg" alt="logo" class="logo">
+        <img src="./img/icon.svg" alt="logo do site" class="logo">
       </a>
       <div class="dropdown-cart">
         <div class="dropdown">
           <div class="dropdown-toggle">
-            <img src="./img/login.svg" alt="login" class="icon-login">
+            <img src="./img/login.svg" alt="icone de Login/Cadastre-se" class="icon-login">
             Entrar / Cadastrar
           </div>
           <div class="dropdown-content">
-            <button aria-label="Entrar com login" class="btn-login">ENTRAR &gt;</button>
+            <button aria-label="login do usuário" class="btn-login">ENTRAR &gt;</button>
             <div class="divider">ou</div>
             <p>Cliente novo? Cadastre-se</p>
           </div>
         </div>
         <div class="cart">
-          <img src="./img/carrinho.svg" alt="carrinho de compras" class="cart-icon">
+          <img src="./img/carrinho.svg" alt="carrinho de compras adicionados" class="cart-icon">
           <span class="cart-count">0</span>
         </div>
       </div>
@@ -62,35 +62,52 @@
           <li>Cestas Românticas</li>
         </ul>
         <div class="content-nav">
-          <p>Cesta Amor Doce</p>
-          <p>Cesta Café da Manhã Romântica</p>
-          <p>Cesta Noite a Dois</p>
-          <p>Cesta Amor em Detalhes</p>
-          <p>Cesta Lua de Mel em Casa</p>
+          <div>
+            <p>Cesta Amor Doce</p>
+            <p>Cesta Café da Manhã Romântica</p>
+            <p>Cesta Noite a Dois</p>
+            <p>Cesta Amor em Detalhes</p>
+            <p>Cesta Lua de Mel em Casa</p>
+          </div>
+          <div>
+            <img src="./img/cesta.webp" alt="imagem da categoria de Cestas-Românticas" class="category-image">
+          </div>
         </div>
+      </div>
       </div>
       <div class="category-dropdown">
         <ul class="nav-toggler">
           <li>Caixas Personalizadas</li>
         </ul>
         <div class="content-nav">
-          <p>Caixa Memórias a Dois</p>
-          <p>Caixa Self-Care do Amor</p>
-          <p>Caixa Surpresa Personalizada</p>
-          <p>Caixa das Sensações</p>
-          <p>Caixa Retrô</p>
+          <div>
+            <p>Caixa Memórias a Dois</p>
+            <p>Caixa Self-Care do Amor</p>
+            <p>Caixa Surpresa Personalizada</p>
+            <p>Caixa das Sensações</p>
+            <p>Caixa Retrô</p>
+          </div>
+          <div>
+            <img src="./img/personalizado.webp" alt="imagem da categoria de Cestas-Personalizadas" class="category-image">
+          </div>
         </div>
+
       </div>
       <div class="category-dropdown">
         <ul class="nav-toggler">
           <li>Doçura Pura</li>
         </ul>
         <div class="content-nav">
-          <p>Caixa Gourmet de Chocolate</p>
-          <p>Cesta Doce & Salgada</p>
-          <p>Kit Café da Tarde</p>
-          <p>Cesta Fit & Amor</p>
-          <p>Box Fondue</p>
+          <div>
+            <p>Caixa Gourmet de Chocolate</p>
+            <p>Cesta Doce & Salgada</p>
+            <p>Kit Café da Tarde</p>
+            <p>Cesta Fit & Amor</p>
+            <p>Box Fondue</p>
+          </div>
+          <div>
+            <img src="./img/doçura-pura.webp" alt="imagem da categoria de Doçura-Pura" class="category-image">
+          </div>
         </div>
       </div>
       <div class="category-dropdown">
@@ -98,11 +115,16 @@
           <li>Mensagens & Cartas</li>
         </ul>
         <div class="cont-nav">
-          <p>Caixa das 365 Mensagens</p>
-          <p>Kit Cartas Eternas</p>
-          <p>Mensagem em Vidro</p>
-          <p>Caixa Linha do Tempo</p>
-          <p>Pote da Felicidade</p>
+          <div>
+            <p>Caixa das 365 Mensagens</p>
+            <p>Kit Cartas Eternas</p>
+            <p>Mensagem em Vidro</p>
+            <p>Caixa Linha do Tempo</p>
+            <p>Pote da Felicidade</p>
+          </div>
+          <div>
+            <img src="./img/mensagens&cartas.webp" alt="imagem da categoria de Mensagens-&-Cartas" class="category-image">
+          </div>
         </div>
       </div>
       <div class="category-dropdown">
@@ -110,11 +132,16 @@
           <li>Ursos & Pelúcias</li>
         </ul>
         <div class="cont-nav">
-          <p>Ursinho Amoroso</p>
-          <p>Kit Pelúcia e Doces</p>
-          <p>Super Pelúcia Romântica</p>
-          <p>Família de Ursinhos</p>
-          <p>Ursinho Musical</p>
+          <div>
+            <p>Ursinho Amoroso</p>
+            <p>Kit Pelúcia e Doces</p>
+            <p>Super Pelúcia Romântica</p>
+            <p>Família de Ursinhos</p>
+            <p>Ursinho Musical</p>
+          </div>
+          <div>
+            <img src="./img/urso&pelúcias.webp" alt="imagem da categoria de Ursos-&-Pelúcias" class="category-image">
+          </div>
         </div>
       </div>
       <div class="category-dropdown">
@@ -122,11 +149,16 @@
           <li>Presentes Criativos</li>
         </ul>
         <div class="cont-nav">
-          <p>Kit Cinema em Casa</p>
-          <p>Caixa Luz do Amor</p>
-          <p>Kit Faça Você Mesmo</p>
-          <p>Caixa Gamer Love</p>
-          <p>Caixa da Aventura</p>
+          <div>
+            <p>Kit Cinema em Casa</p>
+            <p>Caixa Luz do Amor</p>
+            <p>Kit Faça Você Mesmo</p>
+            <p>Caixa Gamer Love</p>
+            <p>Caixa da Aventura</p>
+          </div>
+          <div>
+            <img src="./img/presentescriativos.webp" alt="imagem da categoria de Presentes-Criativos" class="category-image">
+          </div>
         </div>
       </div>
     </nav>
@@ -137,7 +169,45 @@
         <source media="(max-width: 768px)" srcset="img/banner-mobile.webp">
         <img src="./img/banner.webp" alt="-banner-de-promoções" class="promoções">
       </picture>
+      <div class="info-flex">
+        <div class="line-info">
+          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <div>
+            <span>CUPOM BEMVINDO10</span>
+            <span class="span-info">10% de desconto na 1ª compra</span>
+          </div>
+        </div>
+        <div class="line-info">
+          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <div>
+            <span>FRETE GRÁTIS</span>
+            <span class="span-info">Comprando + de R$400,00</span>
+          </div>
+        </div>
+        <div class="line-info">
+          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <div>
+            <span>PARCELAMENTO</span>
+            <span class="span-info">Em até 3x no cartão</span>
+          </div>
+        </div>
+        <div class="line-info">
+          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <div>
+            <span>RECOMENDADA</span>
+            <span class="span-info">Amada pelos clientes </span>
+          </div>
+        </div>
+        <div class="line-info">
+          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <div>
+            <span class="span-weigth">LOJA 100% CONFIÁVEL</span>
+            <span class="span-info">Compre com tranquilidade</span>
+          </div>
+        </div>
+      </div>
     </section>
+
 
   </main>
   <footer>
