modified index.html and style.css in .

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta property="og:title" content="cuori - Presentes Criativos e Kits Personalizados">
   <meta property="og:description" content="Demonstre seu amor com presentes criativos e cestas temáticas inesquecíveis.">
   <meta name="keywords" content="personalizado, personalizados, presente, amor, dia das mães, dia dos pais, dia dos namorados, natal, família, amizade, amor, presente criativo, criatividade, foto, fotografia, almofada com foto, caneca com foto, presentes,significado de nome,como é o nome">
-  <meta property="og:image" content="img/banner-cuori.jpg">
-  <meta property="og:url" content="http://localhost">
+  <meta property="og:image" content="https://arianeslf.github.io/Meu-site/img/banner-cuori.jpg">
+  <meta property="og:url" content="https://arianeslf.github.io/Meu-site/">
   <meta property="og:type" content="website">
   <title>Cuori</title>
   <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
@@ -178,28 +178,28 @@
           </div>
         </div>
         <div class="line-info">
-          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <img src="./img/fretegratis.svg" alt="cupom de desconto do site">
           <div>
             <span>FRETE GRÁTIS</span>
             <span class="span-info">Comprando + de R$400,00</span>
           </div>
         </div>
         <div class="line-info">
-          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <img src="./img/card.svg" alt="cupom de desconto do site">
           <div>
             <span>PARCELAMENTO</span>
             <span class="span-info">Em até 3x no cartão</span>
           </div>
         </div>
         <div class="line-info">
-          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <img src="./img/reviews.svg" alt="cupom de desconto do site">
           <div>
             <span>RECOMENDADA</span>
             <span class="span-info">Amada pelos clientes </span>
           </div>
         </div>
         <div class="line-info">
-          <img src="./img/reward.svg" alt="cupom de desconto do site">
+          <img src="./img/security.svg" alt="cupom de desconto do site">
           <div>
             <span class="span-weigth">LOJA 100% CONFIÁVEL</span>
             <span class="span-info">Compre com tranquilidade</span>
